add choice block

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -77,7 +77,7 @@ header
 
 .promo
 	min-height: 800px
-	background: url(../img/bg/uber_bg.jpg) center (center / cover) no-repeat
+	background: url(../img/bg/uber_bg.png) center (center / cover) no-repeat
 	padding: 150px 0 135px 0
 
 .promo_header
@@ -146,6 +146,7 @@ header
 	text-transform: uppercase
 
 .subtitle
+	margin-top: 19px
 	color: #222222
 	font-family: 'Roboto'
 	font-weight: 400
@@ -183,3 +184,86 @@ header
 	font-size: 15px
 	font-weight: 300
 	line-height: 21px
+
+
+.mobile
+	min-height: 864px
+	padding: 48px 0 79px 0
+	background: url(../img/bg/mobile.bg.png) center (center / cover) no-repeat
+	.row
+		margin-top: 32px
+	&_item
+		position: relative
+		width: 320px
+		height: 280px
+		opacity: 0.9
+		margin: 0 auto
+		margin-bottom: 19px
+		padding-top: 92px
+		&_1
+			background: url(../img/cards/order.jpg) center (center / cover) no-repeat
+		&_2
+			background: url(../img/cards/guard2.jpg) center (center / cover) no-repeat
+		&_3
+			background: url(../img/cards/price.jpg) center (center / cover) no-repeat
+		&_4
+			background: url(../img/cards/credit.jpg) center (center / cover) no-repeat
+		&_5
+			background: url(../img/cards/feedback.jpg) center (center / cover) no-repeat
+		&_6
+			background: url(../img/cards/cutprice.jpg) center (center / cover) no-repeat				
+		&_subtitle
+			color: #FFFFFF
+			font-style: normal
+			font-weight: 400
+			font-size: 24px
+			line-height: 31px
+			text-align: center
+			text-transform: uppercase
+		&_plus
+			display: flex
+			justify-content: center
+			align-items: center
+			position: absolute
+			bottom: 35px
+			left: 50%
+			transform: translateX(-50%)
+			width: 26px
+			height: 26px
+			background-color: #000000
+			margin: 0 auto
+			border-radius: 100%
+			cursor: pointer
+
+.choice
+	position: relative
+	min-height: 898px
+	padding: 30px 0 30px 0
+	background: url(../img/bg/black.jpg)
+	z-index: -1
+	.label_white
+		background-color: #ffffff
+		color: #000000
+	.title_white
+		color: #ffffff
+	.subtitle_white
+		color: #ffffff
+	&_car
+		position: relative
+		text-align: center
+		margin-top: 55px
+		z-index: 3
+	&_white
+		position: absolute
+		min-height: 397px
+		bottom: 0
+		z-index: 2
+	&_descr
+		position: absolute
+		left: 50%
+		transform: translateX(-50%)
+		z-index: 10
+		color: #222222
+		text-align: center
+
+
