fix choice block

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -254,6 +254,8 @@ header
 		margin-top: 55px
 		z-index: 3
 	&_white
+		background: url(../img/bg/white.jpg)
+		min-width: 100%
 		position: absolute
 		min-height: 397px
 		bottom: 0
