--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -352,7 +352,7 @@ nav
 		width: 299px
 		height: 4px
 		background-color: #1fbad6
-		margin: 0 auto
+		margin: 11px auto 0 auto
 	&_wrapper
 		display: flex 
 		justify-content: space-between
